--- a/css/main.css
+++ b/css/main.css
@@ -32,12 +32,12 @@ header {
 }
 
 section > div {
-    text-align: center;
+    /* text-align: center;
     vertical-align: middle;
-    line-height: 20vmin;
-    /* display: flex;
+    line-height: 20vmin; */
+    display: flex;
     justify-content: center;
-    align-items: center; */
+    align-items: center;
 }
 
 
@@ -53,7 +53,7 @@ section > div {
   }
 
 section > div > button {
-    border: .5vmin solid lightblue;
+    border: .5vmin solid rgb(212, 212, 212, .7);
     background-color:lightyellow;
     height: 5vmin;
     width: 5vmin;
@@ -61,11 +61,16 @@ section > div > button {
     margin: 7vmin;
 }
 
-section > div > button:hover {
-    opacity: 1;
-    background-color: lightblue;
+.p1T:hover {
+    background-color: #f0e1ff;
     transition-duration: .3s;
+    border-color: gray;
+}
 
+.p2T:hover {
+    background-color: #e1f0ff;
+    transition-duration: .3s;
+    border-color: gray;
 }
 
 /* grid lines */
@@ -74,19 +79,19 @@ section > div > button:hover {
     border-right: 1vmin solid rgba(128,128,128,.5);
 }
 
-#b1, #b4, #b7 {
+/* #b1, #b4, #b7 {
     border-left: 1vmin solid rgba(128,128,128,.5);
     border-right: 1vmin solid rgba(128,128,128,.5);
-}
+} */
 
 #b2, #b5, #b8 {
     border-left: 1vmin solid rgba(128,128,128,.5);
 }
 
-#b3, #b4, #b5 {
+/* #b3, #b4, #b5 {
     border-top: 1vmin solid rgba(128,128,128,.5);
     border-bottom: 1vmin solid rgba(128,128,128,.5);
-}
+} */
 
 #b0, #b1, #b2 {
     border-bottom: 1vmin solid rgba(128,128,128,.5);
